--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "dotenv": "^10.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.0.0"
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.4.1"
   }
 }
