--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@discordjs/rest": "^0.1.0-canary.0",
     "discord-api-types": "^0.23.1",
     "discord.js": "^13.2.0",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "ts-node": "^10.3.0"
   },
   "devDependencies": {
+    "@types/node": "^16.11.0",
     "eslint": "^8.0.0"
   }
 }
